test/classes/nilability/demo6.good
demo6.chpl:17: error: halt reached - argument to ! is nil
